# fox-friday-bot

./: Cargo.toml  README.md
src/: main.old  main.rs  twbot.rs
src/oauth/: base64.rs  client.rs  mod.rs  parameter.rs  test_strings
src/twbot/: mod.rs
