[package]
name = "fox-friday-bot-rs"
version = "0.1.0"
edition = "2018"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["blocking", "multipart", "json", "rustls-tls"] }
rust-crypto = "0.2.36"
rand = "0.8.4"
lambda_runtime = "0.4"
log = "0.4.14"
oauth2 = "4.1"
percent-encoding = "2.1.0"
rust-s3 = { git = "https://github.com/durch/rust-s3", default-features = false, tag = "0.27.0-rc3", features = ["tokio-rustls-tls"] }
simple_logger = "1.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
url = "2.2.2"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
